bk_ida/gccida/g0/padding_token
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/padding_token/src/cppmacro.c:1329:7: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 * padding_token( cpp_reader_0 *pfile, const cpp_token_0 *source) 
      ^~~~~~~~~~~
      cpp_token
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/padding_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/padding_token/src/cppmacro.c:1329:36: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
const cpp_token_0 * padding_token( cpp_reader_0 *pfile, const cpp_token_0 *source) 
                                   ^~~~~~~~~~~~
                                   cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/padding_token/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/padding_token/src/cppmacro.c:1329:63: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 * padding_token( cpp_reader_0 *pfile, const cpp_token_0 *source) 
                                                              ^~~~~~~~~~~
                                                              cpp_token
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/padding_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/padding_token/src/cppmacro.c:1331:7: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 *result; // rax 
      ^~~~~~~~~~~
      cpp_token
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/padding_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/padding_token/src/cppmacro.c:1335:38: error: expected expression
result->val.node = ( cpp_hashnode_0 *)source; 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/padding_token/src/cppmacro.c:1335:22: error: use of undeclared identifier 'cpp_hashnode_0'
result->val.node = ( cpp_hashnode_0 *)source; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/padding_token/src/cppmacro.c:1336:15: error: cannot assign to variable 'result' with const-qualified type 'const cpp_token *' (aka 'const struct cpp_token *')
result->flags = 0; 
~~~~~~~~~~~~~ ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/padding_token/src/cppmacro.c:1331:20: note: variable 'result' declared const here
const cpp_token_0 *result; // rax 
~~~~~~~~~~~~~~~~~~~^~~~~~
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/padding_token/src/obj/cppmacro.o] Error 1
